# bank

./: README.md  pyproject.toml
reports/: category_expenses.xlsx  weekday_expenses.xlsx
src/: main.py  reports.py  services.py  utils.py  views.py
